@@ -1,0 +1,68 @@
+<!DOCTYPE html>
+<!--
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */
+-->
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>INTER-Mediator - Samples</title>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <link href="../themes/default/css/style.css" rel="stylesheet" type="text/css"/>
+</head>
+<body style="margin: 8px">
+<h1>INTER-Mediator Samples</h1>
+
+<p>Copyright (c) 2010-2017 INTER-Mediator Directive Committee, All rights reserved.</p>
+<p>This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.</p>
+
+<p>Please access web site <a href="http://inter-mediator.org">http://inter-mediator.org</a> to get details.
+    This page is for to access easily to sample pages.</p>
+
+<h2>For Debugging</h2>
+<h3>MySQL</h3>
+<ul>
+    <a href="Sample_forDebugging/search_MySQL.html">search1</a>
+    <a href="Sample_forDebugging/calctest1.html">calctest1</a>
+    <a href="Sample_forDebugging/postonlytest.html">postonly</a>
+    <br/>
+    <a href="Sample_forDebugging/contexttest.html">context-test</a>
+    <a href="Sample_forDebugging/deltest_MySQL.html">logical delete</a>
+    <br/>
+    <a href="Sample_forDebugging/genericrepeater.html">generic enclosure/repeater</a>
+    <br/>
+    <a href="Sample_forDebugging/masterdetailsample.html">master/detail for study meeting</a>
+    <br/>
+    <a href="Sample_easyToUnderstand/JustPost_MySQL.html">JustPost</a>
+</ul>
+<h3>FileMaker Server</h3>
+<ul>
+    <a href="Sample_forDebugging/search_FMS.html">search1</a>
+    <a href="Sample_forDebugging/calctest1_FMS.html">calctest1</a>
+    <a href="Sample_forDebugging/postonlytest_FMS.html">postonly</a>
+    <br/>
+    <a href="Sample_forDebugging/contexttest_FMS.html">context-test</a>
+    <a href="Sample_forDebugging/deltest_FMS.html">logical delete</a>
+    <br/>
+    <a href="Sample_forDebugging/page25.html">authorization per user</a>
+    <br/>
+    <a href="Sample_easyToUnderstand/JustPost_FMS.html">JustPost</a>
+</ul>
+<h2>Demo Script</h2>
+<p>
+    <a href="Demo-Script/demo-script.txt">Script</a>&nbsp;
+    <a href="Demo-Script/demo1.html">Demo1</a>&nbsp;
+    <a href="Demo-Script/demo2.html">Demo2</a>
+    <a href="Demo-Script/demo3.html">Demo3</a>
+</p>
+
+</body>
+</html>
