@@ -22,7 +22,7 @@
 <h1>INTER-Mediator Samples</h1>
 
 <p>Copyright (c) 2010-2017 INTER-Mediator Directive Committee, All rights reserved.</p>
-<p>This project started at the end of 2009 by Masayuki Nii  msyk@msyk.net.</p>
+<p>This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.</p>
 
 <p>Please access web site <a href="http://inter-mediator.org">http://inter-mediator.org</a> to get details.
     This page is for to access easily to sample pages.</p>
@@ -128,7 +128,7 @@
 <h2>Any Kinds of Samples</h2>
 <table>
     <tr>
-        <th></th>
+        <th colspan="2"></th>
         <th>MySQL/MariaDB</th>
         <th>FileMaker Server</th>
         <th>SQLite</th>
@@ -136,7 +136,7 @@
         <th>SQL Server</th>
     </tr>
     <tr>
-        <td>Master-Detail Style Page</td>
+        <td colspan="2">Master-Detail Style Page</td>
         <td><a id="link-1-1" href="Sample_form/form_MySQL.html">show</a></td>
         <td>
             <a href="Sample_form/form_FMS.html">show</a><br>
@@ -149,18 +149,15 @@
         <td><a href="Sample_form/form_SQLServer.html">show</a></td>
     </tr>
     <tr>
-        <td>Search Page</td>
-        <td>
-            <a href="Sample_search/search_MySQL.html">show</a>
-
-        </td>
+        <td colspan="2">Search Page</td>
+        <td><a href="Sample_search/search_MySQL.html">show</a></td>
         <td><a href="Sample_search/search_FMS.html">show</a></td>
         <td><a href="Sample_search/search_SQLite.html">show</a></td>
         <td><a href="Sample_search/search_PostgreSQL.html">show</a></td>
         <td><a href="Sample_search/search_SQLServer.html">show</a></td>
     </tr>
     <tr>
-        <td>Client-Side Calculation Page</td>
+        <td colspan="2">Client-Side Calculation Page</td>
         <td><a href="Sample_invoice/invoice_MySQL.html">show</a></td>
         <td>
             <a href="Sample_invoice/invoice_FMS.html">show</a>
@@ -171,7 +168,7 @@
         <td><a href="Sample_invoice/invoice_SQLServer.html">show</a></td>
     </tr>
     <tr>
-        <td>Realtime Multi-Client Update with Pusher</td>
+        <td colspan="2">Realtime Multi-Client Update with Pusher</td>
         <td><a href="Sample_realtime/invoice_MySQL.html">show</a></td>
         <td><a href="Sample_realtime/invoice_FMS.html">show</a></td>
         <td></td>
@@ -179,7 +176,7 @@
         <td></td>
     </tr>
     <tr>
-        <td>PDF Generating</td>
+        <td colspan="2">PDF Generating</td>
         <td><a href="Sample_pdf/list_detail_MySQL.html">show</a></td>
         <td></td>
         <td></td>
@@ -187,7 +184,7 @@
         <td></td>
     </tr>
     <tr>
-        <td>Asset Management Sample</td>
+        <td colspan="2">Asset Management Sample</td>
         <td>
             <a href="Sample_Asset/asset_list.html">Japanese</a>
             <a href="Sample_Asset_English/asset.html">English</a>
@@ -205,7 +202,7 @@
         <td></td>
     </tr>
     <tr>
-        <td>List-Detail Style Navigation Pages</td>
+        <td colspan="2">List-Detail Style Navigation Pages</td>
         <td>
             <a href="Sample_products/products_MySQL.html">show 2 files</a><br>
             <a href="Sample_products/list_detail_MySQL.html">show single file</a>
@@ -222,7 +219,7 @@
         <td></td>
     </tr>
     <tr>
-        <td>Server-side Extension</td>
+        <td colspan="2">Server-side Extension</td>
         <td>
             <a href="Sample_Extensible/aggregation1.html">show(extending db-class)</a><br>
             <a href="Sample_Extensible/aggregation2.html">show(setting the class)</a>
@@ -233,7 +230,7 @@
         <td></td>
     </tr>
     <tr>
-        <td>Aggregation Query</td>
+        <td colspan="2">Aggregation Query</td>
         <td>
             <a href="Sample_Extensible/aggregation3.html">show</a><br>
         </td>
@@ -243,64 +240,51 @@
         <td></td>
     </tr>
     <tr>
-        <td>JS Components</td>
-        <td>
-            <a href="Sample_webpage/tinymce_MySQL.html">tinymce</a>
-            <a href="Sample_webpage/codemirror_MySQL.html">codemirror</a>
-            <a href="Sample_webpage/fileupload_MySQL.html">file_upload</a>
-            <br />
-            <a href="Sample_webpage/jquery_datepicker_MySQL.html">jQuery_DatePicker</a>
-            <a href="Sample_webpage/fileupload_jQuery_MySQL.html">jQuery_File_Uploader</a>
-        </td>
-        <td>
-            <a href="Sample_webpage/fileupload_FileMaker.html">file_upload</a>
-        </td>
+        <td rowspan="5">JS Components</td>
+        <td>HTML Editor</td>
+        <td><a href="Sample_webpage/tinymce_MySQL.html">tinymce</a></td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
     </tr>
     <tr>
-        <td>API</td>
+        <td>Code Editor</td>
+        <td><a href="Sample_webpage/codemirror_MySQL.html">codemirror</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>File Upload</td>
+        <td><a href="Sample_webpage/fileupload_MySQL.html">file_upload</a></td>
+        <td><a href="Sample_webpage/fileupload_FileMaker.html">file_upload</a></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>jQuery DatePicker</td>
+        <td><a href="Sample_webpage/jquery_datepicker_MySQL.html">jQuery_DatePicker</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>jQuery FileUploader</td>
+        <td><a href="Sample_webpage/fileupload_jQuery_MySQL.html">jQuery_File_Uploader</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td colspan="2">API</td>
         <td>
             <a href="Sample_API/api-test.html">show</a>
         </td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>Easy to Understand</td>
-        <td><a href="Sample_easyToUnderstand/JustPost_MySQL.html">show</a></td>
-        <td><a href="Sample_easyToUnderstand/JustPost_FMS.html">show</a></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>Debugging</td>
-        <td>
-            <a href="Sample_forDebugging/search_MySQL.html">search1</a>
-            <a href="Sample_forDebugging/calctest1.html">calctest1</a>
-            <a href="Sample_forDebugging/postonlytest.html">postonly</a>
-            <br />
-            <a href="Sample_forDebugging/contexttest.html">context-test</a>
-            <a href="Sample_forDebugging/deltest_MySQL.html">logical delete</a>
-            <br />
-            <a href="Sample_forDebugging/genericrepeater.html">generic enclosure/repeater</a>
-            <br />
-            <a href="Sample_forDebugging/masterdetailsample.html">master/detail for study meeting</a>
-        </td>
-        <td>
-            <a href="Sample_forDebugging/search_FMS.html">search1</a>
-            <a href="Sample_forDebugging/calctest1_FMS.html">calctest1</a>
-            <a href="Sample_forDebugging/postonlytest_FMS.html">postonly</a>
-            <br />
-            <a href="Sample_forDebugging/contexttest_FMS.html">context-test</a>
-            <a href="Sample_forDebugging/deltest_FMS.html">logical delete</a>
-            <br />
-            <a href="Sample_forDebugging/page25.html">authorization per user</a>
-        </td>
         <td></td>
         <td></td>
         <td></td>
@@ -360,13 +344,9 @@
         <td></td>
     </tr>
 </table>
-<h2>Demo Script</h2>
+<h2>For Debugging</h2>
 <p>
-    <a href="Demo-Script/demo-script.txt">Script</a>&nbsp;
-    <a href="Demo-Script/demo1.html">Demo1</a>&nbsp;
-    <a href="Demo-Script/demo2.html">Demo2</a>
-    <a href="Demo-Script/demo3.html">Demo3</a>
+    <a href="debug.html">Links to debugging pages.</a>&nbsp;
 </p>
-
 </body>
 </html>
