@@ -54,6 +54,7 @@ Ver.5.7-dev (in development)
   scrollable panel.
 - The DB_Proxy instance can reuse.
 - Japanese new era name is going to start on May 1, 2019. The entry for era name tables are added.
+- Create Samples/debug.html file and separate test-only pages from the index.html.
 - [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
 - [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
 - [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
